--- a/DCCS.LocalizedString.ProjectResourceCreator/DCCS.LocalizedString.ProjectResourceCreator.csproj
+++ b/DCCS.LocalizedString.ProjectResourceCreator/DCCS.LocalizedString.ProjectResourceCreator.csproj
@@ -3,9 +3,19 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <AssemblyName>ProjectTranslator</AssemblyName>
+    <AssemblyName>dotnet-createprojectresource</AssemblyName>
     <Configurations>Debug;Release;Local.Int</Configurations>
     <LangVersion>7.1</LangVersion>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageType>DotnetCliTool</PackageType>
+    <PackageId>DCCS.LocalizedString.ProjectResourceCreator</PackageId>
+    <Version>1.1.1</Version>
+    <Authors>DCCS GmbH</Authors>
+    <Product>DCCS.LocalizedString.ProjectResourceCreator</Product>
+    <Copyright>© DCCS GmbH. All rights reserved.</Copyright>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/DCCS-IT-Business-Solutions/DCCS.LocalizedString.NetStandard</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/DCCS-IT-Business-Solutions/DCCS.LocalizedString.NetStandard.git</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
