--- a/appveyor.yml
+++ b/appveyor.yml
@@ -37,7 +37,7 @@ test:
   # only assemblies to test
   assemblies:
     only:
-      - '**\*.Tests.dll'
+      - 'output/**/*.Tests.dll'
 
 artifacts:
 - path: output/**/*.*
